新增token回调+验证

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,11 @@ spring.freemarker.expose-request-attributes=false
 spring.freemarker.expose-session-attributes=false
 spring.freemarker.expose-spring-macro-helpers=false
 
+###token验证
+config.jwt.secret=abcdefg1234567
+config.jwt.expire=3600
+config.jwt.header=token
+
 # 设置单个文件最大内存
 spring.servlet.multipart.max-file-size=100MB
 # 设置所有文件最大内存
