--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,6 @@ spring.datasource.url=jdbc:sqlserver://39.106.122.19:1433;DataBaseName=SubGroup
 spring.datasource.username=sa
 spring.datasource.password=ps123=321
 
-### FreeMarker 配置
-spring.freemarker.allow-request-override=false
-#Enable template caching.启用模板缓存。
-spring.freemarker.cache=false
-spring.freemarker.check-template-location=true
-spring.freemarker.charset=UTF-8
-spring.freemarker.content-type=text/html
-spring.freemarker.expose-request-attributes=false
-spring.freemarker.expose-session-attributes=false
-spring.freemarker.expose-spring-macro-helpers=false
-
 ###token验证
 config.jwt.secret=abcdefg1234567
 config.jwt.expire=3600
@@ -24,6 +13,18 @@ config.jwt.header=token
 spring.servlet.multipart.max-file-size=100MB
 # 设置所有文件最大内存
 spring.servlet.multipart.max-request-size=100MB
+
+#### FreeMarker 配置
+#spring.freemarker.allow-request-override=false
+##Enable template caching.启用模板缓存。
+#spring.freemarker.cache=false
+#spring.freemarker.check-template-location=true
+#spring.freemarker.charset=UTF-8
+#spring.freemarker.content-type=text/html
+#spring.freemarker.expose-request-attributes=false
+#spring.freemarker.expose-session-attributes=false
+#spring.freemarker.expose-spring-macro-helpers=false
+
 ## 自定义文件上传路径
 #web.upload-path=C:/image
 ## 静态资源托管
@@ -31,6 +32,7 @@ spring.servlet.multipart.max-request-size=100MB
 #spring.resources.static-locations=file:C://files/
 #spring.thymeleaf.prefix=classpath:/files/web/
 
+##word转pdf三方软件
 #jodconverter.local.enabled=true
 ## 设置LibreOffice主目录
 #jodconverter.local.office-home=C:/Program Files/LibreOffice
