--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!--阿里云OSS-->
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>3.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
